# AdaptShield

./: .gitignore  README.md  pyproject.toml  requirements.txt
adaptshield/: __init__.py
adaptshield/api/: __init__.py  main.py
adaptshield/api/routes/: conversations.py  health.py
adaptshield/core/: __init__.py  config.py  models.py
adaptshield/services/: __init__.py  context_engine.py  detector.py  firewall.py  rule_generator.py
docs/: adaptive_ai_firewall .pptx  adaptive_ai_firewall.pptx  adaptive_ai_firewall_paper.docx
tests/: test_api.py
