[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptshield"
version = "0.1.0"
description = "Adaptive, multi-turn jailbreak detection API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "httpx>=0.27,<1.0",
    "openai>=1.0,<2.0",
    "langchain>=0.1,<1.0",
    "langchain-openai>=0.1,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["adaptshield*"]
